--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@libsql/client": "^0.15.0",
+    "@libsql/client": "^0.15.1",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.3",
     "@solidjs/start": "^1.1.3",
@@ -21,14 +21,15 @@
     "eslint": "^9.23.0",
     "prettier": "^3.5.3",
     "solid-js": "^1.9.5",
+    "solid-sonner": "^0.2.8",
     "vinxi": "^0.5.3"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.0.15",
-    "@types/bun": "^1.2.5",
-    "@types/node": "^22.13.11",
+    "@tailwindcss/vite": "^4.0.17",
+    "@types/bun": "^1.2.6",
+    "@types/node": "^22.13.13",
     "drizzle-kit": "^0.30.5",
-    "tailwindcss": "^4.0.15"
+    "tailwindcss": "^4.0.17"
   },
   "engines": {
     "node": ">=22"
