--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.3",
     "@solidjs/start": "^1.1.3",
+    "active-table": "^1.1.6",
+    "d3": "^7.9.0",
     "daisyui": "^5.0.9",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
@@ -26,9 +28,10 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.17",
-    "@types/bun": "^1.2.6",
-    "@types/node": "^22.13.13",
-    "drizzle-kit": "^0.30.5",
+    "@types/bun": "^1.2.8",
+    "@types/d3": "^7.4.3",
+    "@types/node": "^22.13.14",
+    "drizzle-kit": "^0.30.6",
     "tailwindcss": "^4.0.17"
   },
   "engines": {
