--- a/package.json
+++ b/package.json
@@ -15,8 +15,15 @@
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.3",
     "@solidjs/start": "^1.1.3",
+    "@types/d3": "^7.4.3",
     "active-table": "^1.1.6",
-    "d3": "^7.9.0",
+    "d3-array": "^3.2.4",
+    "d3-axis": "^3.0.0",
+    "d3-interpolate": "^3.0.1",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.1.0",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
     "daisyui": "^5.0.9",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
@@ -24,15 +31,16 @@
     "prettier": "^3.5.3",
     "solid-js": "^1.9.5",
     "solid-sonner": "^0.2.8",
-    "vinxi": "^0.5.3"
+    "vinxi": "^0.5.3",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.17",
     "@types/bun": "^1.2.8",
-    "@types/d3": "^7.4.3",
     "@types/node": "^22.13.14",
     "drizzle-kit": "^0.30.6",
-    "tailwindcss": "^4.0.17"
+    "tailwindcss": "^4.0.17",
+    "tailwindcss-motion": "^1.1.0"
   },
   "engines": {
     "node": ">=22"
