--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^9.23.0",
     "prettier": "^3.5.3",
     "solid-js": "^1.9.5",
+    "solid-motionone": "^1.0.3",
     "solid-sonner": "^0.2.8",
     "vinxi": "^0.5.3",
     "zod": "^3.24.2"
