--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@libsql/client": "^0.15.1",
+    "@solid-primitives/tween": "^1.4.0",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.3",
     "@solidjs/start": "^1.1.3",
@@ -28,6 +29,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
     "eslint": "^9.23.0",
+    "gsap": "^3.12.7",
     "prettier": "^3.5.3",
     "solid-js": "^1.9.5",
     "solid-motionone": "^1.0.3",
