--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.3",
     "@types/bun": "^1.2.8",
     "@types/node": "^22.14.0",
