--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@solidjs/start": "^1.1.3",
     "@types/d3": "^7.4.3",
     "active-table": "^1.1.6",
+    "add": "^2.0.6",
     "animejs": "^4.0.1",
     "d3-array": "^3.2.4",
     "d3-axis": "^3.0.0",
